Documentamos el Create y ponemos más restriciones y mensajes
